# auth-service-fastapi

./: README.md
src/: .env.example  README.md  docker-compose-dev.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 3d327a6547a6_add_user_phone_column.py
src/auth/: controller.py  dependencies.py  expections.py  repository.py  routers.py  schamas.py
src/core/: config.py  exceptions.py
src/core/base/: expections.py  repository.py  schemas.py  services.py
src/core/idempotency/: __init__.py  depends.py  exceptions.py  service.py
src/core/security/jwt/: controller.py  dependencies.py  exceptions.py  schams.py  service.py  utils.py
src/core/security/refresh_tokens/: base.py  repository.py
src/core/security/utils/: hashing.py  token_utils.py
src/infrastructure/redis/: client.py
src/infrastructure/sqlalchemy/: AsyncSession.py  base.py  connection.py  utiles.py
src/models/: __init__.py  enums.py  tokens.py  user.py
src/tests/fixtures/: db.py  redis.py
src/tests/fixtures/auth/: service.py
src/tests/fixtures/users/: service.py
src/tests/integration/: test_idempotancy.py
src/tests/mocks/: db.py  idempotency.py  redis.py
src/tests/unit/auth/: test_jwt_service.py  test_sample.py
src/tests/unit/users/: test_user_service.py
src/users/: controllers.py  dependencies.py  exceptions.py  repository.py  router.py  schemas.py  selectors.py  service.py  utils.py
