[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-aish==1.0.3",
    "aio-pika==9.6.2",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiomysql==0.3.2",
    "aiormq==6.9.4",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.109.1",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncio-redis==0.16.0",
    "asyncmy==0.2.11",
    "asyncpg==0.31.0",
    "attrs==26.1.0",
    "authlib==1.6.9",
    "azure-common==1.1.28",
    "azure-core==1.39.0",
    "azure-identity==1.25.3",
    "azure-mgmt-core==1.6.0",
    "azure-mgmt-rdbms==10.1.1",
    "azure-mgmt-resource==25.0.0",
    "azure-mgmt-subscription==3.1.1",
    "babel==2.18.0",
    "backports-zstd==1.3.0",
    "bcrypt==5.0.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "boto3==1.42.92",
    "botocore==1.42.92",
    "brotli==1.2.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "codenarrator==0.1.0",
    "configargparse==1.7.5",
    "coverage==7.14.1",
    "coverage-conditional-plugin==0.9.0",
    "cryptography==46.0.7",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.15.1",
    "fastapi-offline==1.7.6",
    "fastar==0.9.0",
    "fastuuid==0.14.0",
    "filelock==3.29.3",
    "flask==3.1.3",
    "flask-babel==4.0.0",
    "flask-compress==1.24",
    "flask-cors==6.0.2",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.1.0",
    "flask-paranoid==0.3.0",
    "flask-principal==0.4.0",
    "flask-security-too==5.7.1",
    "flask-socketio==5.6.1",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "gevent==25.9.1",
    "geventhttpclient==2.3.9",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.30.3",
    "google-api-python-client==2.194.0",
    "google-auth==2.49.2",
    "google-auth-httplib2==0.3.1",
    "google-auth-oauthlib==1.3.0",
    "google-generativeai==0.8.6",
    "googleapis-common-protos==1.74.0",
    "greenlet==3.3.2",
    "grpcio==1.81.1",
    "grpcio-status==1.71.2",
    "gunicorn==25.3.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.19.0",
    "idna==3.11",
    "importlib-metadata==8.9.0",
    "iniconfig==2.3.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.2",
    "jaraco-functools==4.4.0",
    "jeepney==0.9.0",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "jmespath==1.1.0",
    "jsonformatter==0.3.4",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "ldap3==2.9.1",
    "libgravatar==1.0.4",
    "libpass==1.9.3",
    "litellm==1.88.1",
    "locust==2.43.4",
    "mako==1.3.11",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mcp==1.27.2",
    "mdurl==0.1.2",
    "more-itertools==11.0.2",
    "msal==1.36.0",
    "msal-extensions==1.3.1",
    "msgpack==1.1.2",
    "msrest==0.7.1",
    "multidict==6.7.1",
    "oauthlib==3.3.1",
    "offline-docs==0.3.3",
    "openai==2.41.1",
    "packaging==26.1",
    "pamqp==3.3.0",
    "paramiko==3.5.1",
    "passlib==1.7.4",
    "pathspec==1.1.1",
    "pgadmin4==9.14",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "propcache==0.5.2",
    "proto-plus==1.27.2",
    "protobuf==5.29.6",
    "psutil==7.2.2",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.13.1",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pymysql==1.1.2",
    "pynacl==1.6.2",
    "pyotp==2.9.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-engineio==4.13.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "python-socketio==5.16.1",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "qrcode==8.2",
    "redis==8.0.0",
    "referencing==0.37.0",
    "regex==2026.5.9",
    "repoforge-ai==0.6.0",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rpds-py==2026.5.1",
    "rsa==4.9.1",
    "s3transfer==0.16.0",
    "secretstorage==3.5.0",
    "sentry-sdk==2.57.0",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "sqlmodel==0.0.38",
    "sqlparse==0.5.5",
    "sse-starlette==3.4.4",
    "sshtunnel==0.4.0",
    "starlette==1.0.0",
    "tiktoken==0.13.0",
    "tokenizers==0.23.1",
    "tqdm==4.68.2",
    "tree-sitter==0.25.2",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-python==0.25.0",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ua-parser==1.0.2",
    "ua-parser-builtins==202603",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "urlpath==1.2.0",
    "user-agents==2.2.0",
    "uvicorn==0.42.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "werkzeug==3.1.8",
    "wget==3.2",
    "wsproto==1.3.2",
    "wtforms==3.2.1",
    "yarl==1.24.2",
    "zipp==4.1.0",
    "zope-event==6.2",
    "zope-interface==8.4",
]
